libqt6c/src/libqdatetime.hpp

typedef struct QDateTime QDateTime;
typedef struct QTime QTime;
QTime* QTime_new(const QTime* other);
QTime* QTime_new2(QTime* other);
QTime* QTime_new3();
QTime* QTime_new4(int h, int m);
QTime* QTime_new5(const QTime* param1);
QTime* QTime_new6(int h, int m, int s);
QTime* QTime_new7(int h, int m, int s, int ms);
bool QTime_IsNull(const QTime* self);
bool QTime_IsValid(const QTime* self);
int QTime_Hour(const QTime* self);
int QTime_Minute(const QTime* self);
int QTime_Second(const QTime* self);
int QTime_Msec(const QTime* self);
libqt_string QTime_ToString(const QTime* self);
libqt_string QTime_ToString2(const QTime* self, const libqt_string format);
bool QTime_SetHMS(QTime* self, int h, int m, int s);
QTime* QTime_AddSecs(const QTime* self, int secs);
int QTime_SecsTo(const QTime* self, QTime* t);
QTime* QTime_AddMSecs(const QTime* self, int ms);
int QTime_MsecsTo(const QTime* self, QTime* t);
QTime* QTime_FromMSecsSinceStartOfDay(int msecs);
int QTime_MsecsSinceStartOfDay(const QTime* self);
QTime* QTime_CurrentTime();
QTime* QTime_FromString4(const libqt_string stringVal);
QTime* QTime_FromString5(const libqt_string stringVal, const libqt_string format);
bool QTime_IsValid2(int h, int m, int s);
libqt_string QTime_ToString1(const QTime* self, int f);
bool QTime_SetHMS4(QTime* self, int h, int m, int s, int ms);
QTime* QTime_FromString23(const libqt_string stringVal, int format);
bool QTime_IsValid4(int h, int m, int s, int ms);
void QTime_Delete(QTime* self);