QtBeef/src/Qt/qdatetime.bf

// --------------------------------------------------------------
// QTime
// --------------------------------------------------------------
[CRepr]
struct QTime_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTime_new")]
	public static extern QTime_Ptr QTime_new(void** other);
	[LinkName("QTime_new2")]
	public static extern QTime_Ptr QTime_new2(void** other);
	[LinkName("QTime_new3")]
	public static extern QTime_Ptr QTime_new3();
	[LinkName("QTime_new4")]
	public static extern QTime_Ptr QTime_new4(c_int h, c_int m);
	[LinkName("QTime_new5")]
	public static extern QTime_Ptr QTime_new5(void** param1);
	[LinkName("QTime_new6")]
	public static extern QTime_Ptr QTime_new6(c_int h, c_int m, c_int s);
	[LinkName("QTime_new7")]
	public static extern QTime_Ptr QTime_new7(c_int h, c_int m, c_int s, c_int ms);
	[LinkName("QTime_Delete")]
	public static extern void QTime_Delete(QTime_Ptr self);
	[LinkName("QTime_IsNull")]
	public static extern bool QTime_IsNull(void* self);
	[LinkName("QTime_IsValid")]
	public static extern bool QTime_IsValid(void* self);
	[LinkName("QTime_Hour")]
	public static extern c_int QTime_Hour(void* self);
	[LinkName("QTime_Minute")]
	public static extern c_int QTime_Minute(void* self);
	[LinkName("QTime_Second")]
	public static extern c_int QTime_Second(void* self);
	[LinkName("QTime_Msec")]
	public static extern c_int QTime_Msec(void* self);
	[LinkName("QTime_ToString")]
	public static extern libqt_string QTime_ToString(void* self);
	[LinkName("QTime_ToString2")]
	public static extern libqt_string QTime_ToString2(void* self, libqt_string format);
	[LinkName("QTime_SetHMS")]
	public static extern bool QTime_SetHMS(void* self, c_int h, c_int m, c_int s);
	[LinkName("QTime_AddSecs")]
	public static extern void* QTime_AddSecs(void* self, c_int secs);
	[LinkName("QTime_SecsTo")]
	public static extern c_int QTime_SecsTo(void* self, void* t);
	[LinkName("QTime_AddMSecs")]
	public static extern void* QTime_AddMSecs(void* self, c_int ms);
	[LinkName("QTime_MsecsTo")]
	public static extern c_int QTime_MsecsTo(void* self, void* t);
	[LinkName("QTime_FromMSecsSinceStartOfDay")]
	public static extern void* QTime_FromMSecsSinceStartOfDay(c_int msecs);
	[LinkName("QTime_MsecsSinceStartOfDay")]
	public static extern c_int QTime_MsecsSinceStartOfDay(void* self);
	[LinkName("QTime_CurrentTime")]
	public static extern void* QTime_CurrentTime();
	[LinkName("QTime_FromString4")]
	public static extern void* QTime_FromString4(libqt_string stringVal);
	[LinkName("QTime_FromString5")]
	public static extern void* QTime_FromString5(libqt_string stringVal, libqt_string format);
	[LinkName("QTime_IsValid2")]
	public static extern bool QTime_IsValid2(c_int h, c_int m, c_int s);
	[LinkName("QTime_ToString1")]
	public static extern libqt_string QTime_ToString1(void* self, Qt_DateFormat f);
	[LinkName("QTime_SetHMS4")]
	public static extern bool QTime_SetHMS4(void* self, c_int h, c_int m, c_int s, c_int ms);
	[LinkName("QTime_FromString23")]
	public static extern void* QTime_FromString23(libqt_string stringVal, Qt_DateFormat format);
	[LinkName("QTime_IsValid4")]
	public static extern bool QTime_IsValid4(c_int h, c_int m, c_int s, c_int ms);
}
class QTime : IQTime
{
	private QTime_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QTime_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQTime other)
	{
		this.ptr = CQt.QTime_new((.)other?.ObjectPtr);
	}
	public this()
	{
		this.ptr = CQt.QTime_new3();
	}
	public this(c_int h, c_int m)
	{
		this.ptr = CQt.QTime_new4(h, m);
	}
	public this(c_int h, c_int m, c_int s)
	{
		this.ptr = CQt.QTime_new6(h, m, s);
	}
	public this(c_int h, c_int m, c_int s, c_int ms)
	{
		this.ptr = CQt.QTime_new7(h, m, s, ms);
	}
	public ~this()
	{
		CQt.QTime_Delete(this.ptr);
	}
	public bool IsNull()
	{
		return CQt.QTime_IsNull((.)this.ptr.Ptr);
	}
	public bool IsValid()
	{
		return CQt.QTime_IsValid((.)this.ptr.Ptr);
	}
	public c_int Hour()
	{
		return CQt.QTime_Hour((.)this.ptr.Ptr);
	}
	public c_int Minute()
	{
		return CQt.QTime_Minute((.)this.ptr.Ptr);
	}
	public c_int Second()
	{
		return CQt.QTime_Second((.)this.ptr.Ptr);
	}
	public c_int Msec()
	{
		return CQt.QTime_Msec((.)this.ptr.Ptr);
	}
	public void ToString(String outStr)
	{
		CQt.QTime_ToString((.)this.ptr.Ptr);
	}
	public void ToString2(String outStr, String format)
	{
		CQt.QTime_ToString2((.)this.ptr.Ptr, libqt_string(format));
	}
	public bool SetHMS(c_int h, c_int m, c_int s)
	{
		return CQt.QTime_SetHMS((.)this.ptr.Ptr, h, m, s);
	}
	public QTime_Ptr AddSecs(c_int secs)
	{
		return QTime_Ptr(CQt.QTime_AddSecs((.)this.ptr.Ptr, secs));
	}
	public c_int SecsTo(IQTime t)
	{
		return CQt.QTime_SecsTo((.)this.ptr.Ptr, (.)t?.ObjectPtr);
	}
	public QTime_Ptr AddMSecs(c_int ms)
	{
		return QTime_Ptr(CQt.QTime_AddMSecs((.)this.ptr.Ptr, ms));
	}
	public c_int MsecsTo(IQTime t)
	{
		return CQt.QTime_MsecsTo((.)this.ptr.Ptr, (.)t?.ObjectPtr);
	}
	public QTime_Ptr FromMSecsSinceStartOfDay(c_int msecs)
	{
		return QTime_Ptr(CQt.QTime_FromMSecsSinceStartOfDay(msecs));
	}
	public c_int MsecsSinceStartOfDay()
	{
		return CQt.QTime_MsecsSinceStartOfDay((.)this.ptr.Ptr);
	}
	public QTime_Ptr CurrentTime()
	{
		return QTime_Ptr(CQt.QTime_CurrentTime());
	}
	public QTime_Ptr FromString4(String stringVal)
	{
		return QTime_Ptr(CQt.QTime_FromString4(libqt_string(stringVal)));
	}
	public QTime_Ptr FromString5(String stringVal, String format)
	{
		return QTime_Ptr(CQt.QTime_FromString5(libqt_string(stringVal), libqt_string(format)));
	}
	public bool IsValid2(c_int h, c_int m, c_int s)
	{
		return CQt.QTime_IsValid2(h, m, s);
	}
	public void ToString1(String outStr, Qt_DateFormat f)
	{
		CQt.QTime_ToString1((.)this.ptr.Ptr, f);
	}
	public bool SetHMS4(c_int h, c_int m, c_int s, c_int ms)
	{
		return CQt.QTime_SetHMS4((.)this.ptr.Ptr, h, m, s, ms);
	}
	public QTime_Ptr FromString23(String stringVal, Qt_DateFormat format)
	{
		return QTime_Ptr(CQt.QTime_FromString23(libqt_string(stringVal), format));
	}
	public bool IsValid4(c_int h, c_int m, c_int s, c_int ms)
	{
		return CQt.QTime_IsValid4(h, m, s, ms);
	}
}
interface IQTime : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QDateTime
// --------------------------------------------------------------
[CRepr]
struct QDateTime_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
